--- a/CFF/CFF.csproj
+++ b/CFF/CFF.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="Classes\Forecast.cs" />
     <Compile Include="Classes\ForecastItem.cs" />
+    <Compile Include="Classes\ForecastResult.cs" />
+    <Compile Include="Classes\ForecastResultItem.cs" />
     <Compile Include="Engines\RoughEngine.cs" />
     <Compile Include="Enumerations\EForecastItemType.cs" />
     <Compile Include="Enumerations\EForecastType.cs" />
@@ -48,9 +50,13 @@
     <Compile Include="Interfaces\IForecast.cs" />
     <Compile Include="Interfaces\IForecastItem.cs" />
     <Compile Include="Interfaces\IForecastEngine.cs" />
+    <Compile Include="Interfaces\IForecastResult.cs" />
+    <Compile Include="Interfaces\IForecastResultItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
