--- a/CFF.Tests/CFF.Tests.csproj
+++ b/CFF.Tests/CFF.Tests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ForecastHelperTests.cs" />
     <Compile Include="ForecastTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
