--- a/CFF/CFF.csproj
+++ b/CFF/CFF.csproj
@@ -39,11 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Forecast.cs" />
-    <Compile Include="Classes\ForecastHelper.cs" />
-    <Compile Include="Classes\ForecastItem.cs" />
-    <Compile Include="Classes\ForecastResult.cs" />
-    <Compile Include="Classes\ForecastResultItem.cs" />
+    <Compile Include="Implementations\Forecast.cs" />
+    <Compile Include="Implementations\ForecastHelper.cs" />
+    <Compile Include="Implementations\ForecastItem.cs" />
+    <Compile Include="Implementations\ForecastResult.cs" />
+    <Compile Include="Implementations\ForecastResultItem.cs" />
     <Compile Include="Engines\LinqEngine.cs" />
     <Compile Include="Engines\RoughEngine.cs" />
     <Compile Include="Enumerations\EDurationType.cs" />
