--- a/CFF.Tests/packages.config
+++ b/CFF.Tests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="EPPlus" version="4.1.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="NSubstitute" version="1.7.2.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net45" />
+  <package id="EPPlus" version="5.3.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="NSubstitute" version="4.2.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="NUnit" version="3.12.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net45" />
 </packages>
